--- a/templates/index.html
+++ b/templates/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <h1>profilo di {{df["Nome"]}} {{df["Cognome"]}}</h1>
-    <p>Scuola {{df["Scuola"]}}</p>
-    <p>Hobby {{df["Hobby"]}}</p>
+    <h3>Scuola {{df["Scuola"]}}</h3>
+    <h3>Hobby {{df["Hobby"]}}</h3>
     <a href="{{url_for('modifica')}}">modifica</a>
 </body>
 </html>
